# video_scaling

./: .gitignore  CMakeLists.txt  gl.c  gl.h  main.c  main.h  o.txt  shader.fs  shader.vs  utils.c  vcpkg-configuration.json  vcpkg.json
